--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
     <script type="module" src="/scripts/script.js" allow="autoplay"></script>
     <link rel="stylesheet" href="./styles/style.index.css">
-
+    <link rel="preload" crossorigin="anonymous" as="font" href="font/carinosanssemibold-webfont.woff" type="font/woff" />
+    <link rel="preload" crossorigin="anonymous" as="font" href="font/carinosanssemibold-webfont.woff2" type="font/woff2" />
 
 
     <title>Document</title>
