--- a/main.html
+++ b/main.html
@@ -6,11 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Start the game!</title>
     <link rel="stylesheet" href="./styles/style.main.css">
+    <script type="module" src="/scripts/main.js" allow="autoplay"></script>
 </head>
 <body>
+    <div class="bg-popContainer" id="bg-popContainer">
+        <div class="pop-box2">
+          <p class="name">Rules</p>
+          <button id="closer">&times;</button>
+          <p class="rules">
+            OMG, did you SERIOUSLY think you can find rules here??? Go google, dude
+          </p>
+        </div>
+      </div>
+
+
+
 <div class="container">
     <h1>SEA</h1>
-    <h1>BATTLE</h1>
+    <h1>BATTLE</h1><br>
     <div class="wrapper">
        
         <button onclick="window.location.href='/index.html'">
@@ -21,7 +34,7 @@
           <span></span>
         </button><br><br><br>
 
-        <button>
+        <button id="button">
             Rules
              <span></span>
              <span></span>
