--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
-    <script type="module" src="/scripts/script.js" allow="autoplay"></script>
+    <script type="module" src="scripts/script.js" allow="autoplay"></script>
     <link rel="stylesheet" href="./styles/style.index.css">
     <link rel="preload" crossorigin="anonymous" as="font" href="font/carinosanssemibold-webfont.woff" type="font/woff" />
     <link rel="preload" crossorigin="anonymous" as="font" href="font/carinosanssemibold-webfont.woff2" type="font/woff2" />
