--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Start the game!</title>
     <link rel="stylesheet" href="./styles/style.main.css">
-    <script type="module" src="/scripts/main.js" allow="autoplay"></script>
+    <script type="module" src="scripts/main.js" allow="autoplay"></script>
 </head>
 <body>
     <div class="bg-popContainer" id="bg-popContainer">
