changed index and main names for HTML

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h1>BATTLE</h1><br>
     <div class="wrapper">
        
-        <button onclick="window.location.href='/index.html'">
+        <button onclick="window.location.href='/main.html'">
          Let's start! 
           <span></span>
           <span></span>
