--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
     <h1>BATTLE</h1><br>
     <div class="wrapper">
        
-        <button onclick="window.location.href='main.html'">
+        <button onclick="window.location.href='index.html'">
          Let's start! 
           <span></span>
           <span></span>
