changed title to Seabattle

--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <link rel="preload" crossorigin="anonymous" as="font" href="font/carinosanssemibold-webfont.woff2" type="font/woff2" />
 
 
-    <title>Document</title>
+    <title>Seabattle</title>
   </head>
   <body></body>
 </html>
